Print GC log